--- a/grocerys_app/package.json
+++ b/grocerys_app/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
