--- a/grocerys_app/package.json
+++ b/grocerys_app/package.json
@@ -16,6 +16,7 @@
     "lottie-react-native": "^4.0.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-linear-gradient": "^2.5.6",
