--- a/grocerys_app/package.json
+++ b/grocerys_app/package.json
@@ -25,7 +25,10 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-timeline-flatlist": "^0.7.6",
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.3",
