--- a/grocerys_app/package.json
+++ b/grocerys_app/package.json
@@ -19,6 +19,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
